--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,18 +1,22 @@
+/* NewApp.css */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: rgb(255, 249, 196);
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: rgb(34, 33, 33);
+  color: #271200;
 }
 
 h1 {
-  padding-top: 10px;
+  padding-top: 20px;
   text-align: center;
-  color: #864747;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  color: #FF6347;
+  /* Tomato Red */
 }
 
 #logo {
@@ -27,10 +31,11 @@ h1 {
 }
 
 nav {
-  background-color: teal;
+  background-color: #4CAF50;
+  /* Green */
   display: flex;
   justify-content: center;
-  height: 20px;
+  height: 40px;
 }
 
 nav ul {
@@ -43,7 +48,7 @@ nav ul a {
   align-items: center;
   padding: 20px;
   text-decoration: none;
-  color: #000;
+  color: #fff;
   transition: 0.5s ease-in;
   font-size: 18px;
 }
@@ -64,7 +69,8 @@ nav ul a {
 .item img {
   width: 100%;
   height: 100%;
-  border-radius: 5px;
+  border-radius: 8px;
+  /* Slightly increased border-radius */
   object-fit: cover;
   cursor: pointer;
   transition: 0.2s ease;
@@ -76,12 +82,15 @@ nav ul a {
 
 .overlay {
   position: absolute;
+  color: white;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.7);
+  /* Increased opacity */
+  border-radius: 8px;
+  /* Slightly increased border-radius */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -95,7 +104,8 @@ nav ul a {
 }
 
 .overlay h4 {
-  color: #864747;
+  color: #FF6347;
+  /* Tomato Red */
   margin: 0;
 }
 
@@ -103,24 +113,29 @@ nav ul a {
   margin: 10px 0;
   padding: 5px;
   text-align: center;
+  color: white;
 }
 
 .item button {
   width: 100%;
   padding: 10px;
-  background-color: #478686;
+  background-color: #4CAF50;
+  /* Green */
   color: #fff;
   border: none;
   outline: none;
   border-radius: 8px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
-  font-weight: normal;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-weight: bold;
+  /* Increased font-weight */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .item button:hover {
-  background-color: #275656;
+  background-color: #45a049;
+  /* Darker Green */
   transform: scale(1.05);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  /* Increased shadow */
 }
